tests/ui/on_mod.stderr
error: expected `enum`
 --> tests/ui/on_mod.rs:5:1
  |
5 | mod foo {
  | ^^^
